--- a/docs/01.前端/25.JavaScript文章/110.call、apply以及bind.md
+++ b/docs/01.前端/25.JavaScript文章/110.call、apply以及bind.md
@@ -1,10 +1,11 @@
 ---
 title: call、apply以及bind
 date: 2017-06-26 15:35:11
-tags: 
-  - js
 categories:
-  - 随笔
+  - 前端
+  - JavaScript文章
+tags:
+  - JavaScript
 permalink: /pages/bb5aa8/
 sidebar: auto
 author: 
