--- a/docs/01.前端/40.学习笔记/70.低代码平台.md
+++ b/docs/01.前端/40.学习笔记/70.低代码平台.md
@@ -20,6 +20,8 @@ author:
 
 2019年底，中国软件行业协会认为，国内低代码领域尚处于早期，市场未来需求将出现暴增。随着低代码应用场景不断拓宽，2020年会有更多企业或企业信息化服务提供商将采用技术门槛更低、开发效率更高的低代码开发平台，为自己量身定做企业核心系统以满足个性化的企业管理需求。
 
+<!-- more -->
+
 ## LCDP是什么
 低代码开发平台（LCDP）是无需编码（0代码）或通过少量代码就可以快速生成应用程序的开发平台。通过可视化进行应用程序开发的方法，使具有不同经验水平的开发人员可以
 通过图形化的用户界面，使用拖拽组件和模型驱动的逻辑来创建网页和移动应用程序。 低代码开发平台（LCDP）的正式名称直到2014年6月才正式确定，整个低代码开发领域却可以追溯到更早前第四代编程语言和快速应用开发工具。
