fix: 静态文件删除，统一用图床

--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 # blog地址
-http://github.ufade.com
+[github.ufade.com](https://github.ufade.com)
 
-# 参考theme
-https://doc.xugaoyi.com/
+# 参考vuepress-theme-vdoing
+[doc.xugaoyi.com](https://doc.xugaoyi.com/)
+
+
+> 该项目有文章是vdoing作者的,我没有全部删除，署名还是作者，我只做参考使用。
