--- a/docs/00.目录页/04.更多.md
+++ b/docs/00.目录页/04.更多.md
@@ -13,6 +13,6 @@ article: false
 comment: false
 editLink: false
 author:
-  name: xugaoyi
-  link: https://github.com/xugaoyi
+  name: Alan0827
+  link: https://github.com/Alan0827
 ---
