fix: 修复sidebar auto问题

--- a/docs/01.前端/25.JavaScript文章/130.js事件模型.md
+++ b/docs/01.前端/25.JavaScript文章/130.js事件模型.md
@@ -3,10 +3,10 @@ title: js事件模型
 date: 2017-07-26 15:35:11
 tags: 
   - js
-categories:
-  - 随笔
+categories: 
+  - 前端
+  - JavaScript文章
 permalink: /pages/3136d8/
-sidebar: auto
 author: 
   name: Alan0827
   link: https://github.com/Alan0827
