--- a/docs/01.前端/25.JavaScript文章/140.重学正则表达式1.md
+++ b/docs/01.前端/25.JavaScript文章/140.重学正则表达式1.md
@@ -4,11 +4,10 @@ date: 2020-12-13 14:32:49
 tags: 
   - js
   - 正则
-categories:
-  - 随笔
-toc: true
+categories: 
+  - 前端
+  - JavaScript文章
 permalink: /pages/60f536/
-sidebar: auto
 author: 
   name: Alan0827
   link: https://github.com/Alan0827
