--- a/docs/01.前端/30.vue学习/20.vue双向绑定原理2.md
+++ b/docs/01.前端/30.vue学习/20.vue双向绑定原理2.md
@@ -5,9 +5,9 @@ tags:
   - vue
   - js
 categories:
-  - 随笔
+  - 前端
+  - vue学习
 permalink: /pages/7dfbc0/
-sidebar: auto
 author: 
   name: Alan0827
   link: https://github.com/Alan0827
@@ -220,7 +220,7 @@ export function observe (value, asRootData){
 
 而对应object数据，在上一篇文章中我们已经在defineReactive函数中进行了递归操作。
 
-<font color="red"> 注意事项：</font>
+<font color="red"> **注意事项：**</font>
 ```
 let arr = [1,2]
 arr[0] = 5;       // 通过数组下标修改数组中的数据
@@ -232,9 +232,11 @@ Vue增加了两个全局API:Vue.set和Vue.delete
 ---
 
 参考文档：
-https://github.com/vuejs/vue/tree/dev/src/core
-https://cn.vuejs.org/v2/guide/reactivity.html
-https://vue-js.com/learn-vue/start/
+- [https://github.com/vuejs/vue/tree/dev/src/core](https://github.com/vuejs/vue/tree/dev/src/core)
+- [https://cn.vuejs.org/v2/guide/reactivity.html](https://cn.vuejs.org/v2/guide/reactivity.html)
+- [https://vue-js.com/learn-vue/start/](https://vue-js.com/learn-vue/start/)
+
+
 
 
 
