--- a/docs/01.前端/30.vue学习/50.Vue后台管理系统权限菜单控制.md
+++ b/docs/01.前端/30.vue学习/50.Vue后台管理系统权限菜单控制.md
@@ -6,9 +6,9 @@ tags:
   - js
   - element
 categories:
-  - 随笔
+  - 前端
+  - vue学习
 permalink: /pages/6e93c4/
-sidebar: auto
 author: 
   name: Alan0827
   link: https://github.com/Alan0827
