--- a/docs/01.前端/30.vue学习/60.vue组件缓存之keep-alive.md
+++ b/docs/01.前端/30.vue学习/60.vue组件缓存之keep-alive.md
@@ -5,10 +5,10 @@ tags:
   - vue
   - js
 categories:
-  - 随笔
+  - 前端
+  - vue学习
 toc: true
 permalink: /pages/9b8cd8/
-sidebar: auto
 author: 
   name: Alan0827
   link: https://github.com/Alan0827
