--- a/docs/01.前端/40.学习笔记/75.高德地图api开发.md
+++ b/docs/01.前端/40.学习笔记/75.高德地图api开发.md
@@ -1,34 +1,31 @@
 ---
 title: 高德地图采坑
 date: 2018-11-20 11:03:55
+permalink: /pages/aa3906/
 titleTag: 原创
 tags: 
   - 高德地图
   - js
-  - 前端
-  - 地图
-  - 学习
 categories:
-  - 随笔
-permalink: /pages/aa3906/
-sidebar: auto
+  - 前端
+  - 学习笔记
 author: 
   name: Alan0827
   link: https://github.com/Alan0827
 ---
 
 
-### 本次需求分析：
-> 1. 从原来城市的数据，变为省市区的数据；
-> 2. 地图需要根据缩放级别绘制icon；
-> 3. 地图点击需要切换到当前点击区域的数据；
-> 4. 实时投递弹窗和实时清运弹窗；
-> 5. 有权限区域的绘制；
+## 本次需求分析：
+1. 从原来城市的数据，变为省市区的数据；
+2. 地图需要根据缩放级别绘制icon；
+3. 地图点击需要切换到当前点击区域的数据；
+4. 实时投递弹窗和实时清运弹窗；
+5. 有权限区域的绘制；
 
 <!-- more -->
 
 
-# 1. 权限区域绘制
+## 1. 权限区域绘制
 
 > 目前项目使用行政区划浏览 绘制权限区域 具体用法如下：
 
@@ -36,7 +33,7 @@ author:
     AMapUI.loadUI(['geo/DistrictExplorer'], function(DistrictExplorer) {
     //启动页面
     initPage(DistrictExplorer);
-    });
+    }); 
 
     function initPage(DistrictExplorer) {
     //创建一个实例
@@ -99,8 +96,8 @@ author:
 ![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185610.313udrtl2560.webp)
 新需求是要求到区一级，有权限的区域可能不是一个市的全部区域，行政区划浏览会把一个城市的所有区域绘制出来，或者把一个省的所有市绘制出来，所以，这种绘制区域的方案pass掉。。。。
 
+<div align=center><img src="https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185622.1elzsm6otl28.webp"></div>
 
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185622.1elzsm6otl28.webp)
 
     我新的方案采用的是 高德的 “行政区查询” 
     AMap.plugin('AMap.DistrictSearch', function () {
@@ -138,7 +135,7 @@ author:
 我们要做的只有，把有权限区域的区域编码拿到，就可以绘制权限区域了。
 
 
-# 2. 地图点击需要切换到当前区域的数据
+## 2. 地图点击需要切换到当前区域的数据
 
 
 ![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185650.4udsai8mgqg0.webp)
@@ -241,12 +238,13 @@ author:
 
 我们是需要弹出当前点击的区域名称，然后点击当前的信息窗体，请求数据。。。。
 
-# 3. 根据地图缩放级别展示不同的icon  回收机
+## 3. 根据地图缩放级别展示不同的icon  回收机
 
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185628.1hpuku52bagw.webphttps://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185628.1hpuku52bagw.webp)
+![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185628.1hpuku52bagw.webp)
 这个之前做城市数据墙的时候，可能回收机的数量不是特别大，只是显示一个城市的回收机，而且也不用变换图标，所以性能上面没有发现问题，后来，我沿用之前添加marker的方法，由于我的地图是需要显示大量的点，而且会做切换，上了生产环境之后发现严重的性能问题，pass掉了，测试，预发布。。。。。没有生产那么多的数据，并没有发现。。。。。悲催
 
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185631.214jss41enk0.webp)
+<div align=center><img src="https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185631.214jss41enk0.webp"></div>
+
 后来，经过团队的讨论，选了高德地图海量点的方案，此方案“据高德说”，10万+ 以下都可以hold住，牛鼻。。。。。。
 
     //海量点的style  图标提前定义写死，后面更换时直接修改数据里的style
@@ -365,7 +363,7 @@ author:
 
 哦，好像还有个实时弹窗的问题
 
-# 4. 实时投递弹窗和实时清运弹窗
+## 4. 实时投递弹窗和实时清运弹窗
 
 
 
