--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 # blog地址
-[github.ufade.com](https://github.ufade.com)
+https://github.ufade.com
 
 # 参考vuepress-theme-vdoing
-[doc.xugaoyi.com](https://doc.xugaoyi.com/)
+https://doc.xugaoyi.com/
 
 
-> 该项目有文章是vdoing作者的,我没有全部删除，署名还是作者，我只做参考使用。
+注：该项目有文章是vdoing作者的,我没有全部删除，署名还是作者，我只做参考使用。
