--- a/docs/01.前端/25.JavaScript文章/120.闭包.md
+++ b/docs/01.前端/25.JavaScript文章/120.闭包.md
@@ -3,10 +3,10 @@ title: JavaScript 闭包
 date: 2016-08-15 22:40:30
 tags: 
     - js
-categories:
-  - 随笔
+categories: 
+  - 前端
+  - JavaScript文章
 permalink: /pages/2fe068/
-sidebar: auto
 author: 
   name: Alan0827
   link: https://github.com/Alan0827
