fix: 修改vue2迁移文档地址

--- a/docs/01.前端/30.vue学习/70.vue2 升级vue3 路线.md
+++ b/docs/01.前端/30.vue学习/70.vue2 升级vue3 路线.md
@@ -67,7 +67,7 @@ author:
 ```
 * vite
 * vite 构建相关插件
-* 语法的变更,见vue迁移文档 [从vue2迁移]([link](https://v3-migration.vuejs.org/zh/))
+* 语法的变更,见vue迁移文档 [从vue2迁移](https://v3-migration.vuejs.org/zh/breaking-changes/global-api.html)
 * 第三方插件
 ```
 1. @antv/data-set、@antv/g2、@antv/layout、@antv/x6、@antv/x6-vue-shape //拖拽、图表相关
@@ -85,5 +85,4 @@ author:
 13. @novnc/novnc
 
 ```
-
 
