fix: 修复图床地址

--- a/docs/00.目录页/01.前端.md
+++ b/docs/00.目录页/01.前端.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data: 
     path: 01.前端
-    imgUrl: https://cdn.staticaly.com/gh/Alan0827/image-house@master/20220901/frontend.nfk2i7bcz9s.webp
+    imgUrl: https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/20220901/frontend.nfk2i7bcz9s.webp
     description: JavaScript、ES6、Vue框架等前端技术
 title: 前端
 permalink: /web/
