--- a/docs/01.前端/30.vue学习/40.vue虚拟dom2.md
+++ b/docs/01.前端/30.vue学习/40.vue虚拟dom2.md
@@ -20,13 +20,13 @@ newEnd(新后)，新VDOM的最后一个
 oldStart(旧前)，旧VDOM的第一个
 oldEnd(旧后)，旧VDOM最后一个
 来看一张图，很明了
-![diff](https://cdn.staticaly.com/gh/Alan0827/image-house@master/20220907/diff.4w79iq3uhm20.jpg)
+![diff](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/20220907/diff.4w79iq3uhm20.jpg)
 
 <!-- more -->
 
 > while循环不是简单的从一个方向，从前往后，或从后往前循环，而是要从两边往中间走
 
-![diff5](https://cdn.staticaly.com/gh/Alan0827/image-house@master/20220907/diff5.5fr32cs3kwg0.jpg)
+![diff5](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/20220907/diff5.5fr32cs3kwg0.jpg)
 
 * newStartIdx:newChildren数组里开始位置的下标；
 * newEndIdx:newChildren数组里结束位置的下标；
@@ -155,21 +155,21 @@ function updateChildren (parentElm, oldCh, newCh, insertedVnodeQueue, removeOnly
 
 **1. 新前和旧前**
 把newChildren数组里的所有未处理子节点的第一个子节点和oldChildren数组里所有未处理子节点的第一个子节点做比对，如果相同，直接进入更新节点的操作并且由于新前与旧前两个节点的位置也相同，无需进行节点移动操作
-![diff1](https://cdn.staticaly.com/gh/Alan0827/image-house@master/20220907/diff1.1fpa4qx80e74.jpg)
+![diff1](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/20220907/diff1.1fpa4qx80e74.jpg)
 
 **2. 新后和旧后**
 把newChildren数组里所有未处理子节点的最后一个子节点和oldChildren数组里所有未处理子节点的最后一个子节点做比对，如果相同，那就直接进入更新节点的操作并且由于新后与旧后两个节点的位置也相同，无需进行节点移动操作
-![diff2](https://cdn.staticaly.com/gh/Alan0827/image-house@master/20220907/diff2.7hhh773q8ro0.jpg)
+![diff2](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/20220907/diff2.7hhh773q8ro0.jpg)
 
 **3. 新后和旧前**
 把newChildren数组里所有未处理子节点的最后一个子节点和oldChildren数组里所有未处理子节点的第一个子节点做比对，如果相同，那就直接进入更新节点的操作，更新完后再将oldChildren数组里的该节点移动到与newChildren数组里节点相同的位置；
-![diff3](https://cdn.staticaly.com/gh/Alan0827/image-house@master/20220907/diff3.3w2r2frb14i0.jpg)
+![diff3](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/20220907/diff3.3w2r2frb14i0.jpg)
 
 注意，我们要把oldChildren数组里把第一个子节点移动到数组中**所有未处理节点之后。**
 
 **4. 新前和旧后**
 把newChildren数组里所有未处理子节点的第一个子节点和oldChildren数组里所有未处理子节点的最后一个子节点做比对，如果相同，那就直接进入更新节点的操作，更新完后再将oldChildren数组里的该节点移动到与newChildren数组里节点相同的位置；
-![diff4](https://cdn.staticaly.com/gh/Alan0827/image-house@master/20220907/diff4.1p097r61n280.jpg)
+![diff4](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/20220907/diff4.1p097r61n280.jpg)
 注意，我们要把oldChildren数组里把最后一个子节点移动到数组中**所有未处理节点之前。**
 
 
