--- a/docs/01.前端/40.学习笔记/75.高德地图api开发.md
+++ b/docs/01.前端/40.学习笔记/75.高德地图api开发.md
@@ -93,10 +93,10 @@ author:
     map.setFitView(districtExplorer.getAllFeaturePolygons());
     }
 
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185610.313udrtl2560.webp)
+![avatar](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/gaode/微信图片_20181219185610.313udrtl2560.webp)
 新需求是要求到区一级，有权限的区域可能不是一个市的全部区域，行政区划浏览会把一个城市的所有区域绘制出来，或者把一个省的所有市绘制出来，所以，这种绘制区域的方案pass掉。。。。
 
-<div align=center><img src="https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185622.1elzsm6otl28.webp"></div>
+<div align=center><img src="https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/gaode/微信图片_20181219185622.1elzsm6otl28.webp"></div>
 
 
     我新的方案采用的是 高德的 “行政区查询” 
@@ -138,7 +138,7 @@ author:
 ## 2. 地图点击需要切换到当前区域的数据
 
 
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185650.4udsai8mgqg0.webp)
+![avatar](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/gaode/微信图片_20181219185650.4udsai8mgqg0.webp)
 例如，当前点击的是 广东省深圳市南山区，我们没法判断到底是点击的是广东省，深圳市，还是南山区，所以区分不了点击的省市区；
 
 而且，点击地图的时候只会返回城市级别的code，用code做请求的时候，来获取数据。
@@ -240,10 +240,10 @@ author:
 
 ## 3. 根据地图缩放级别展示不同的icon  回收机
 
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185628.1hpuku52bagw.webp)
+![avatar](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/gaode/微信图片_20181219185628.1hpuku52bagw.webp)
 这个之前做城市数据墙的时候，可能回收机的数量不是特别大，只是显示一个城市的回收机，而且也不用变换图标，所以性能上面没有发现问题，后来，我沿用之前添加marker的方法，由于我的地图是需要显示大量的点，而且会做切换，上了生产环境之后发现严重的性能问题，pass掉了，测试，预发布。。。。。没有生产那么多的数据，并没有发现。。。。。悲催
 
-<div align=center><img src="https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185631.214jss41enk0.webp"></div>
+<div align=center><img src="https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/gaode/微信图片_20181219185631.214jss41enk0.webp"></div>
 
 后来，经过团队的讨论，选了高德地图海量点的方案，此方案“据高德说”，10万+ 以下都可以hold住，牛鼻。。。。。。
 
@@ -352,9 +352,9 @@ author:
         }
     }
 
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185636.6ubvqfz4qc40.webp)
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185642.4mqvh7b3i3a0.webp)
-![avatar](https://cdn.staticaly.com/gh/Alan0827/image-house@master/gaode/微信图片_20181219185646.45d1c6em2k20.webp)
+![avatar](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/gaode/微信图片_20181219185636.6ubvqfz4qc40.webp)
+![avatar](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/gaode/微信图片_20181219185642.4mqvh7b3i3a0.webp)
+![avatar](https://jsd.cdn.zzko.cn/gh/Alan0827/picx-images-hosting@master/gaode/微信图片_20181219185646.45d1c6em2k20.webp)
 详细的方法都在上面了，图标的话根据级别不同，共有5种。
 
 
